k8s/ingress/voting-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  namespace: voting
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: vote.devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-vote
                port:
                  number: 80
    - host: result.devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result-result
                port:
                port:
                 number: 80
